--- a/nhsbugs/AUTHORS
+++ b/nhsbugs/AUTHORS
@@ -1,5 +1,6 @@
-Ross Jones (github.com/rossjones)
-Robin Winslow (github.com/nottrobin)
-Dr VJ Joshi (github.com/VJ911)
-Karl Williams (github.com/deadlight)
+Authors, in alphabetical order:
 Colin Wren (github.com/gimpneek)
+Karl Williams (github.com/deadlight)
+Robin Winslow (github.com/nottrobin)
+Ross Jones (github.com/rossjones)
+Dr VJ Joshi (github.com/VJ911)
